# chmod-calculator

./: .gitlab-ci.yml  Cargo.toml  README.md
src/: lib.rs  main.rs
tests/: cli_test.rs
